<?xml version="1.0"?>
<package format="2">
  <name>navigation_demo</name>
  <version>0.0.0</version>
  <description>The navigation_demo package</description>

  <maintainer email="ai@todo.todo">ai</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
